# solana_presale

./: Anchor.toml  Readme.md  configs.txt  package-lock.json  testing.md
client/: client.ts  client_test.ts
programs/errors/: Cargo.toml
programs/errors/src/: lib.rs  state.rs
programs/errors/src/instructions/: add_whitelist.rs  buy_token.rs  claim_token.rs  initialize.rs  mod.rs  refund.rs  remove_whitelist.rs  set_whitelist.rs  update_presale_period.rs
programs/solana_ido/: Cargo.toml
programs/solana_ido/src/: lib.rs  state.rs
programs/solana_ido/src/instructions/: buy_token.rs  claim_token.rs  mod.rs  update_presale_period.rs
programs/test_program/: Cargo.toml
programs/test_program/src/: lib.rs
tests/: anchor.ts
