[package]
name = "test_program"
version = "0.1.0"
description = "Testing"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "test_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
solana-program = "1.16.24"
anchor-spl = "0.29.0"
